--- a/src/views/dashboard/Dashboard.scss
+++ b/src/views/dashboard/Dashboard.scss
@@ -10,16 +10,17 @@
     flex: calc(32% - (var(--space) * 2 ));
     display: flex;
     flex-direction: column;
-    background-color: var(--color-bg-cat);
+    background-color: var(--white);
     padding: var(--space);
     border-radius: var(--border-radius);
-    border-radius: red;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.09);
   }
 
   &__title {
     font-family: var(--font-family);
-    font-weight: 300;
-    min-height: 50px
+    font-size: var(--font-size-16);
+    font-weight: 700;
+    min-height: 30px;
   }
 
     &__body {
@@ -27,8 +28,7 @@
     }
 
       &__rating {
-        font-size: var(--font-size-64);
-        font-weight: 100;
+        font-size: var(--font-size-32);
         margin: 0;
       }
 }
