--- a/src/views/dashboard/Dashboard.scss
+++ b/src/views/dashboard/Dashboard.scss
@@ -4,7 +4,7 @@
   gap: var(--space);
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 var(--space-big);
 
   &__item {
     flex: calc(32% - (var(--space) * 2 ));
@@ -13,7 +13,7 @@
     background-color: var(--white);
     padding: var(--space);
     border-radius: var(--border-radius);
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.09);
+    box-shadow: 0 1px 1px 0 var(--color-bg-cat);
   }
 
   &__title {
