--- a/src/components/layout/Topbar.scss
+++ b/src/components/layout/Topbar.scss
@@ -2,7 +2,9 @@
   display: flex;
   align-items: center;
   padding: var(--space);
-  background-color: var(--bg-color-light);
+  background-color: var(--main-color);
+  color: white;
+  text-transform: uppercase;
 
   &__last {
     margin-left: auto;
