--- a/src/Scss/_forms.scss
+++ b/src/Scss/_forms.scss
@@ -33,6 +33,10 @@ input:focus {
   border-bottom: 2px solid #3f51b5; /* Color azul de Material Design */
 }
 
+input:checked {
+  background-color: red;
+}
+
 /* Estilos para el botón de inicio de sesión */
 button {
   padding: 10px 20px;
@@ -47,4 +51,9 @@ button {
 /* Estilos para el botón de inicio de sesión cuando se pasa el cursor por encima */
 button:hover {
   background-color: #303f9f; /* Color azul oscuro de Material Design */
+}
+
+button:disabled {
+  opacity: 0.3;
+  cursor: not-allowed;
 }
