--- a/src/views/test/Test.scss
+++ b/src/views/test/Test.scss
@@ -12,6 +12,10 @@
     text-transform: uppercase;
   }
 
+  &__title {
+    font-size: var(--font-size-16);
+  }
+
   &__button {
     margin-top: auto;
   }
@@ -24,17 +28,28 @@
   }
 
   &__answer {
+    display: flex;
+    min-height: 100px;
     padding: var(--space);
     background-color: var(--white);
     border-radius: var(--border-radius);
     box-shadow: 0 1px 1px 0 var(--dark-grey);
     font-weight: var(--font-weight-normal);
     margin-bottom: var(--margin-bottom);
+
+    label {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      margin: 0;
+    }
     span {
       flex: 1;
+      margin-right: var(--space);
     }
     input {
       flex: 0 0 24px;
+      margin: 0;
     }
   }
 }
