Order answers by order number.

--- a/src/Scss/variables/_root.scss
+++ b/src/Scss/variables/_root.scss
@@ -53,6 +53,7 @@
   --font-family: 'Lato', sans-serif;
   --fontfamily-heads: 'Montserrat', sans-serif;
 
+  --font-size-14: 14px;
   --font-size-16: 16px;
   --font-size-20: 20px;
   --font-size-32: 32px;
