--- a/src/views/test/Test.scss
+++ b/src/views/test/Test.scss
@@ -1,55 +1,54 @@
 .test {
   display: flex;
-  flex-direction: column;
   height: 100vh;
 
-  &__topbar {
-    display: flex;
-    align-items: center;
-    padding: var(--space);
-    background-color: var(--main-color);
-    color: white;
-    text-transform: uppercase;
+  &__aside {
+    padding: 0 var(--space);
   }
 
-  &__title {
-    font-size: var(--font-size-16);
+  &__list {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(auto-fill, minmax(16px, auto));
+    justify-content: start;
+    width: 100%;
+    gap: 10px;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
   }
 
-  &__button {
-    margin-top: auto;
-  }
-
-  &__wrapper {
-    padding: var(--space);
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__answer {
-    display: flex;
-    min-height: 100px;
-    padding: var(--space);
-    background-color: var(--white);
-    border-radius: var(--border-radius);
-    box-shadow: 0 1px 1px 0 var(--dark-grey);
-    font-weight: var(--font-weight-normal);
-    margin-bottom: var(--margin-bottom);
-
-    label {
-      flex: 1;
+    &__indicator {
+      position: relative;
       display: flex;
-      align-items: center;
-      margin: 0;
+      padding-left: 10px;
+      width: 50px;
+      text-align: center;
+      font-size: var(--font-size-14);
+      font-weight: var(--font-weight-bold);
+
+      &::before {
+        content: "";
+        position: absolute;
+        inset: 0 auto 0 0;
+        width: 10px;
+        background-color: black;
+      }
+
+      &__qnumber {
+        background-color: var(--dark-grey);
+        color: white;
+        flex: 1;
+      }
     }
-    span {
-      flex: 1;
-      margin-right: var(--space);
+
+    &__answered {
+      display: block;
+      border: 1px solid var(--dark-grey);
+      background-color: white;
+      margin-left: auto;
+      width: 16px;
+      color: black;
+      text-align: center;
     }
-    input {
-      flex: 0 0 24px;
-      margin: 0;
-    }
-  }
 }
