--- a/src/Scss/_forms.scss
+++ b/src/Scss/_forms.scss
@@ -39,9 +39,11 @@ input:checked {
 
 /* Estilos para el botón de inicio de sesión */
 button {
-  padding: 10px 20px;
+  padding: 6px 10px;
+  text-transform: uppercase;
   border: none;
-  background-color: var(--secondary-color); /* Color azul de Material Design */
+  background-color: var(--orange);
+  border: 1px solid var(--orange);
   color: #fff;
   font-size: 16px;
   cursor: pointer;
