--- a/src/views/test/Test.scss
+++ b/src/views/test/Test.scss
@@ -1,52 +1,65 @@
 .test {
   display: flex;
-  height: 100vh;
+  width: 100%;
+  padding-top: var(--space);
+
+  &__topbar {
+    display: flex;
+    align-items: center;
+    background-color: var(--light-grey);
+    margin-top: var(--space);
+    padding: var(--space);
+
+    &--action {
+      margin-left: auto;
+    }
+  }
 
   &__aside {
     padding: 0 var(--space);
   }
 
-  &__list {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-rows: repeat(auto-fill, minmax(16px, auto));
-    justify-content: start;
-    width: 100%;
-    gap: 10px;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-  }
+    &__list {
+      display: grid;
+      grid-auto-flow: column;
+      grid-template-rows: repeat(auto-fill, minmax(16px, auto));
+      justify-content: start;
+      width: 100%;
+      gap: 10px;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
 
-    &__indicator {
-      position: relative;
-      display: flex;
-      padding-left: 10px;
-      width: 50px;
-      text-align: center;
-      font-size: var(--font-size-14);
-      font-weight: var(--font-weight-bold);
+      &__indicator {
+        position: relative;
+        display: flex;
+        padding-left: 10px;
+        width: 50px;
+        text-align: center;
+        font-size: var(--font-size-14);
+        font-weight: var(--font-weight-bold);
 
-      &--current {
-        .test__indicator__qnumber {
-          background-color: blue;
+        &--current {
+          .test__indicator__qnumber {
+            background-color: blue;
+          }
+        }
+
+        &::before {
+          content: "";
+          position: absolute;
+          inset: 0 auto 0 0;
+          width: 10px;
+          background-color: black;
+        }
+
+        &__qnumber {
+          background-color: var(--dark-grey);
+          color: white;
+          flex: 1;
         }
       }
-
-      &::before {
-        content: "";
-        position: absolute;
-        inset: 0 auto 0 0;
-        width: 10px;
-        background-color: black;
-      }
-
-      &__qnumber {
-        background-color: var(--dark-grey);
-        color: white;
-        flex: 1;
-      }
-    }
 
     &__answered {
       display: block;
@@ -58,15 +71,62 @@
       text-align: center;
     }
 
-    &__main {
-      label {
-        display: flex;
-        align-items: flex-start;
-        input {
-          max-width: 16px;
-          margin-right: 12px;
-        }
+  &__main {
+    border: 1px solid var(--light-grey);
+    padding: var(--space);
+    flex: 1;
+  }
+
+    &__navigation {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: var(--unit);
+    }
+
+    &__currentquestion {
+      &__number {
+        display: inline-block;
+        color: blue;
+        padding: 0 6px;
       }
+      &__title {
+        padding: var(--space);
+        margin: 0;
+        font-weight: var(--font-weight-bold);
+        font-size: var(--font-size-18);
+        background-color: var(--color-aesa-dark-yellow);
+        border-top-right-radius: var(--border-radius);
+        border-top-left-radius: var(--border-radius);
+      }
+
+      &__answers {
+        background-color: var(--color-aesa-yellow);
+        padding: var(--space) 0;
+        border-bottom-right-radius: var(--border-radius);
+        border-bottom-left-radius: var(--border-radius);
+      }
+
+        &__answer {
+          border-bottom: 1px solid var(--border-color);
+          margin-bottom: var(--unit);
+
+          &__letter {
+            min-width: 13px;
+          }
+
+          label {
+            display: flex;
+            align-items: center;
+            margin: 0;
+            cursor: pointer;
+
+            input {
+              max-width: 16px;
+              margin-right: 12px;
+              margin: 0 var(--unit);
+            }
+          }
+        }
     }
 }
 
