Fix load renewed data from ExamDetails when the test finishes

--- a/src/views/test/Test.scss
+++ b/src/views/test/Test.scss
@@ -45,6 +45,19 @@
             background-color: blue;
           }
         }
+          &--incorrect {
+            .test__answered {
+              background-color: red;
+              color: white;
+            }
+          }
+
+          &--correct {
+            .test__answered {
+              background-color: green;
+              color: white;
+            }
+          }
 
         &::before {
           content: "";
