- Add counter in local Storage - Rework the loading screen / Icon

--- a/src/Scss/variables/_root.scss
+++ b/src/Scss/variables/_root.scss
@@ -59,6 +59,7 @@
 
   --font-size-14: 14px;
   --font-size-16: 16px;
+  --font-size-16: 18px;
   --font-size-20: 20px;
   --font-size-32: 32px;
   --font-size-64: 64px;
@@ -77,4 +78,5 @@
   --border-radius: 4px;
 
   --pagewidth: 1440px;
+  --block-small: 450px;
 }
