--- a/src/Scss/_utilities.scss
+++ b/src/Scss/_utilities.scss
@@ -38,10 +38,10 @@
 
 .alert {
   position: relative;
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 1rem;
+  padding: var(--space);
   border: 1px solid transparent;
   border-radius: 0.25rem;
+  width: 100%;
 
   &--success {
     color: #0f5132;
@@ -60,4 +60,9 @@
     background-color: #f8d7da;
     border-color: #f5c2c7;
   }
+}
+
+
+.t-align-center {
+  text-align: center;
 }
