--- a/src/Scss/variables/_root.scss
+++ b/src/Scss/variables/_root.scss
@@ -57,6 +57,7 @@
   --font-family: 'Lato', sans-serif;
   --fontfamily-heads: 'Montserrat', sans-serif;
 
+  --font-size-12: 12px;
   --font-size-14: 14px;
   --font-size-16: 16px;
   --font-size-16: 18px;
