--- a/src/Scss/_utilities.scss
+++ b/src/Scss/_utilities.scss
@@ -66,3 +66,12 @@
 .t-align-center {
   text-align: center;
 }
+
+
+.font-size-32 {
+  font-size: var(--font-size-32);
+}
+
+.font-weight-bold {
+  font-weight: var(--font-weight-bold);
+}
