Highlight  current answer, and student right or wrong answer.

--- a/src/views/test/Test.scss
+++ b/src/views/test/Test.scss
@@ -101,6 +101,18 @@
       width: 16px;
       color: black;
       text-align: center;
+
+      &--correct {
+        background-color: green;
+      }
+
+      &--incorrect {
+        background-color: red;
+      }
+
+      &--actual {
+        background-color: green;
+      }
     }
 
   &__main {
