--- a/src/components/categoryOverview/categoryOverview.scss
+++ b/src/components/categoryOverview/categoryOverview.scss
@@ -19,7 +19,7 @@
     border-radius: var(--border-radius);
     border-top: 1px solid var(--color-bg-cat);
     // box-shadow: 0 2px 0px -1px var(--color-bg-cat);
-    box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.1);
 
     @include respond-to(medium) {
       flex: 0 0 calc(20% - (var(--space) * 2 ));
@@ -31,6 +31,7 @@
     font-size: var(--font-size-16);
     font-weight: var(--font-weight-normal);
     padding-right: 60px;
+    flex: 1;
   }
 
     &__body {
@@ -49,8 +50,17 @@
           color: var(--mute-color);
           font-weight: var(--font-weight-light);
         }
-  &__total-tests {
-    position: absolute;
-    inset: var(--unit) var(--unit) auto auto;
+  &__overview {
+    display: flex;
+    width: 100%;
+    margin-top: auto;
+
+    &__item {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
