--- a/src/Scss/variables/_root.scss
+++ b/src/Scss/variables/_root.scss
@@ -87,6 +87,7 @@
   // Units
   --unit: 6px;
   --space: calc(var(--unit) * 2);
+  --space-18: calc(var(--unit) * 3);
   --margin-bottom: calc(var(--unit) * 3);
   --space-big: calc(var(--unit) * 4);
   --border-radius: 4px;
