Add areas an main behaviour to cancel subscription

--- a/src/Scss/_buttons.scss
+++ b/src/Scss/_buttons.scss
@@ -1,6 +1,5 @@
 button, .btn {
   padding: var(--unit) var(--space);
-  border: none;
   border: 1px solid var(--sunset);
   background-color: transparent;
   color: var(--sunset);
@@ -36,6 +35,12 @@ button, .btn {
     &:hover {
       color: #fff;
     }
+  }
+
+  &--danger {
+    background-color: var(--color-error);
+    color: white;
+    border: 1px solid var(--color-error);
   }
 }
 
