--- a/src/Scss/_utilities.scss
+++ b/src/Scss/_utilities.scss
@@ -41,7 +41,14 @@
 .ui-block {
   background-color: var(--white);
   padding: var(--space);
+  border-radius: var(--border-radius);
+    border-top: 1px solid var(--color-bg-cat);
+    // box-shadow: 0 2px 0px -1px var(--color-bg-cat);
+    box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.1);
 }
+
+
+
 
 //-----> Pills
 .pill {
