--- a/src/components/categoryOverview/categoryOverview.scss
+++ b/src/components/categoryOverview/categoryOverview.scss
@@ -1,8 +1,8 @@
 @import "../../Scss/mixins";
 
 .category-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(316px, 1fr));
   gap: var(--space);
   list-style-type: none;
   padding: var(--space);
@@ -10,7 +10,7 @@
 
   &__item {
     position: relative;
-    flex: 0 0 calc(32% - (var(--space) * 2 ));
+    flex: 0 0 33%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
