--- a/src/Scss/_mixins.scss
+++ b/src/Scss/_mixins.scss
@@ -37,7 +37,7 @@ $breakpoints: (
   }
 }
 
-@mixin center-content ($totalwidth : $pagemaxwidth) {
+@mixin center-content ($totalwidth : 1024px) {
 	width: 100%;
 	padding-right: calc((100% - #{$totalwidth}) / 2);
 	padding-left: calc((100% - #{$totalwidth}) / 2);
