--- a/src/Scss/style.scss
+++ b/src/Scss/style.scss
@@ -37,6 +37,13 @@ h6 {
   margin: 0 0 1em;
 }
 
+.title-page {
+  line-height: 4;
+  margin-bottom: 2em;
+  text-align: center;
+  border-bottom: 2px solid var(--secondary-color);
+}
+
 a, a:visited {
   color: var(--link-color);
   font-weight: var(--font-weight-normal);
@@ -63,7 +70,7 @@ p {
 .container {
   width: 100%;
   max-width: var(--pagewidth);
-  margin: 0 auto;
+  margin: 0 auto var(--space-big);
   flex: 1;
 }
 
