--- a/src/Scss/_buttons.scss
+++ b/src/Scss/_buttons.scss
@@ -4,8 +4,10 @@ button, .btn {
   background-color: transparent;
   color: var(--sunset);
   font-size: var(--font-size-16);
+  text-align: center;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  user-select: none;
 
   &:hover {
     color: #fff;
@@ -30,8 +32,7 @@ button, .btn {
   &--cta {
     background-color: var(--sunset);
     color: #fff;
-    padding-left: var(--space-18);
-    padding-right: var(--space-18);
+    padding: var(--space) var(--space-18);
 
     &:hover {
       color: #fff;
@@ -42,6 +43,11 @@ button, .btn {
     background-color: var(--color-error);
     color: white;
     border: 1px solid var(--color-error);
+  }
+
+
+  &--full {
+    width: 100%;
   }
 }
 
