--- a/src/Scss/style.scss
+++ b/src/Scss/style.scss
@@ -38,10 +38,10 @@ h6 {
 }
 
 .title-page {
-  line-height: 4;
-  margin-bottom: 2em;
+  font-size: var(--font-size-56);
+  line-height: 1.5;
+  margin: 1em 0;
   text-align: center;
-  border-bottom: 2px solid var(--secondary-color);
 }
 
 a, a:visited {
@@ -65,6 +65,10 @@ p {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+
+  main {
+    flex: 1;
+  }
 }
 
 .container {
